# sweden-violence-risk-ml

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  pyproject.toml
.github/workflows/: test.yml
configs/: demo.yaml
docs/: DATA_DICTIONARY.md  GOVERNANCE.md  ML_PLAN.md  ROADMAP.md  STUDY_PROTOCOL.md
scripts/: build_pdf.py
src/violence_risk/: __init__.py  cli.py  data.py  metrics.py  model.py  split.py
tests/: test_pipeline.py
website/: index.html  script.js  styles.css
