[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saker-ml"
version = "0.1.0"
description = "Synthetic-data reference pipeline for a Swedish violence prediction study"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pandas>=2.0", "scikit-learn>=1.3", "PyYAML>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
saker-ml = "violence_risk.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
